<resources>
    <string name="app_name">DemoProject</string>
    <string name="BlankError"> should not be blank</string>
    <string name="EmailError">Email Id not valid</string>
    <string name="EmailExistsError">Email Id Already Exists</string>
    <string name="Error500">Error: Something Went Wrong</string>
    <string name="InvalidUser">Invalid email id or password</string>
    <string name="NoInternet">Please check your internet connection</string>
    <string name="TitleAccount">Account</string>
    <string name="TitleCategories">Categories</string>
    <string name="TitleHome">Home</string>
    <string name="TitleShortlist">Wish List</string>

    <string name="add_success">Successfully Added</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buy">Buy Now</string>
    <string name="cart">Add To Cart</string>
    <string name="cart_empty">Cart Is Empty</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear">Clear All</string>
    <string name="color_select">Please Select Color</string>
    <string name="email">Email Id</string>
    <string name="filter">FILTER</string>
    <string name="filters">Filters</string>
    <string name="item_add_wishlist">Item Added To Wish List</string>
    <string name="item_exists">Item Already Added</string>
    <string name="item_rem_wishlist">Item Removed From Wish List</string>
    <string name="mobile">Mobile Number</string>
    <string name="my_orders">My Orders</string>
    <string name="name">Full Name</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="place_order">Place Order</string>
    <string name="retry">RETRY</string>
    <string name="search_menu_title">Search</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="size_select">Please Select Size</string>
    <string name="sort">SORT</string>
    <string name="splash_text">e - Commerce Demo</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
