<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
              android:background="@color/white" android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView android:id="@+id/back" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:src="@drawable/ic_arrow_left"
               android:scaleType="center"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultMargin" android:layout_centerInParent="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                          android:layout_height="wrap_content" android:layout_margin="@dimen/defaultMargin">
                <TextView android:textSize="@dimen/reg_title" android:textColor="@color/black"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/defaultMargin"
                          android:layout_marginRight="@dimen/defaultMargin" android:text="@string/name"/>
                <EditText android:id="@+id/name" android:layout_width="match_parent"
                          android:layout_height="wrap_content" android:layout_marginLeft="@dimen/defaultMargin"
                          android:layout_marginRight="@dimen/defaultMargin" android:hint="@string/name"
                          android:maxLines="1" android:singleLine="true"
                          android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"/>
                <TextView android:textSize="@dimen/reg_title" android:textColor="@color/black"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/defaultMargin" android:layout_marginTop="@dimen/app_default"
                          android:layout_marginRight="@dimen/defaultMargin" android:text="@string/email"/>
                <EditText android:id="@+id/email" android:layout_width="match_parent"
                          android:layout_height="wrap_content" android:layout_marginLeft="@dimen/defaultMargin"
                          android:layout_marginRight="@dimen/defaultMargin" android:hint="@string/email"
                          android:maxLines="1" android:singleLine="true"
                          android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time"/>
                <TextView android:textSize="@dimen/reg_title" android:textColor="@color/black"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/defaultMargin" android:layout_marginTop="@dimen/app_default"
                          android:layout_marginRight="@dimen/defaultMargin" android:text="@string/mobile"/>
                <EditText android:id="@+id/mobile" android:layout_width="match_parent"
                          android:layout_height="wrap_content" android:layout_marginLeft="@dimen/defaultMargin"
                          android:layout_marginRight="@dimen/defaultMargin" android:hint="@string/mobile"
                          android:maxLines="1" android:singleLine="true" android:maxLength="10"
                          android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"/>
                <TextView android:textSize="@dimen/reg_title" android:textColor="@color/black"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/defaultMargin" android:layout_marginTop="@dimen/app_default"
                          android:layout_marginRight="@dimen/defaultMargin" android:text="@string/password"/>
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/defaultMargin"
                                android:layout_marginRight="@dimen/defaultMargin">
                    <EditText android:id="@+id/password" android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:hint="@string/password" android:maxLines="1"
                              android:singleLine="true" android:layout_toLeftOf="@+id/showpassword"
                              android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"/>
                    <ImageView android:id="@+id/showpassword" android:focusable="true"
                               android:focusableInTouchMode="false" android:clickable="true"
                               android:layout_width="wrap_content" android:layout_height="wrap_content"
                               android:src="@drawable/ic_eye_off_grey600_24dp" android:layout_alignParentRight="true"
                               android:layout_centerVertical="true"/>
                </RelativeLayout>
                <Button android:textSize="16sp" android:textColor="@color/white" android:id="@+id/signup"
                        android:background="@drawable/rounded_corner_blue" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginLeft="@dimen/defaultMargin"
                        android:layout_marginTop="@dimen/app_default" android:layout_marginRight="@dimen/defaultMargin"
                        android:text="@string/signup"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
